# src/cmd/http/docs/swagger.json
@@ -33,6 +33,16 @@
                     "auth"
                 ],
                 "summary": "Actualizar el correo electronico",
+                "parameters": [
+                    {
+                        "description": "nuevo email",
+                        "name": "newEmail",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/dto.UpdateAuthEmailDTO"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -99,12 +109,12 @@
                 "summary": "Actualizar la contraseña",
                 "parameters": [
                     {
-                        "description": "name, username, email, password, role",
+                        "description": "newPassword",
                         "name": "authDto",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.RegisterDto"
+                            "$ref": "#/definitions/dto.UpdateAuthPasswordDTO"
                         }
                     }
                 ],
@@ -233,6 +243,16 @@
                     "auth"
                 ],
                 "summary": "Actualizar informacion del usuario, name || phone",
+                "parameters": [
+                    {
+                        "description": "name || phone",
+                        "name": "UserUpdateData",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/dto.UserUpdateData"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -290,13 +310,16 @@
                 "summary": "Verificar si un codigo es valido",
                 "parameters": [
                     {
+                        "type": "string",
                         "description": "code",
-                        "name": "CodeDTO",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.CodeDTO"
-                        }
+                        "name": "code",
+                        "in": "path"
+                    },
+                    {
+                        "type": "string",
+                        "description": "type",
+                        "name": "type",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -887,20 +910,6 @@
                 }
             }
         },
-        "dto.CodeDTO": {
-            "type": "object",
-            "required": [
-                "code"
-            ],
-            "properties": {
-                "code": {
-                    "type": "string"
-                },
-                "idUser": {
-                    "type": "integer"
-                }
-            }
-        },
         "dto.NewCodeDTO": {
             "type": "object",
             "required": [
@@ -955,12 +964,45 @@
                 }
             }
         },
+        "dto.UpdateAuthEmailDTO": {
+            "type": "object",
+            "required": [
+                "newEmail"
+            ],
+            "properties": {
+                "newEmail": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.UpdateAuthPasswordDTO": {
+            "type": "object",
+            "required": [
+                "newPassword"
+            ],
+            "properties": {
+                "newPassword": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.UpdateProfileDto": {
             "type": "object",
             "properties": {
                 "description": {
                     "type": "string",
                     "maxLength": 500
+                }
+            }
+        },
+        "dto.UserUpdateData": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
                 }
             }
         },
@@ -1135,6 +1177,9 @@
                     "type": "integer"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "phone": {
                     "type": "string"
                 },
                 "roles": {
